# md-davis

./: .bumpversion.cfg  .coveragerc  .editorconfig  .gitignore  .readthedocs.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  dev_environment.yml  environment.yml  install_dependencies.bat  make_installer.py  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
conda_environments/: doc_environment.yml  environment.yml  environment_dev.yml  environment_pymol.yml  environment_pymol_dev.yml
docs/: Makefile  acylphosphatase_residue_wise_data_aligned.html  conf.py  doc_environment.yml  electrostatics.html  electrostatics.md  index.html  index.md  index.rst  installation.rst  instructions.html  instructions.md  landscapes.html  make.bat  md_davis-imports.txt  requirements.txt  usage.rst
docs/source/: cli.rst  commands.rst  conf.py  gui.rst  index.rst  install.rst  introduction.rst  reference.rst
md_davis/: __init__.py  __main__.py  amino_acids.py  cli.py  collate.py  collect.py  contacts.py  hbond.py  hbonds.py  hemoglobin.py  md_davis.py  md_davis_gui.py  plot_do_dssp_per_residue.py  plot_xvg.py  polar.py  process_gromacs_trajectory.py  residue.py  secStr_counts.py  sequence.py  xvg.py
md_davis/collect_data/: __init__.py  append_dihedral_standard_deviation.py  append_dssp.py  append_rmsd_rg.py  append_rmsf.py  append_sequence.py  collect_residue_wise_data.py  collect_residue_wise_data.py.bak  create_aligned_dataframe.py  (+6 more)
tests/: input.toml  test_md_davis.py
(+123 files in other folders)
